--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
-    "lang": "en",
-    "name": "GDG DevFest Ukraine 2015",
-    "short_name": "GDG DevFest Ukraine 2015",
+    "lang": "pt",
+    "name": "Arenatech 2015",
+    "short_name": "Arenatech 2015",
     "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128"
@@ -16,6 +16,6 @@
         "sizes": "192x192"
     }],
     "start_url": "/#!/",
-    "theme_color": "#00BCD4",
+    "theme_color": "#F44336",
     "display": "standalone"
 }
