--- a/app/manifest.json
+++ b/app/manifest.json
@@ -16,6 +16,6 @@
         "sizes": "192x192"
     }],
     "start_url": "/#!/",
-    "theme_color": "#F44336",
+    "theme_color": "#67006A",
     "display": "standalone"
 }
